add all files needed for the web page

--- a/index.html
+++ b/index.html
@@ -170,9 +170,12 @@ div#img-label {
  Source code and info...</a></b>
 </div>
 
+<!--
 <script type="text/javascript" src="js/d3.js"></script>
+-->
+<script type="text/javascript" src="https://d3js.org/d3.v3.min.js"></script>
 <script type="text/javascript" src="js/crossfilter.js"></script>
-<script type="text/javascript" src="js/dc.js"></script>
+<script type="text/javascript" src="js/dc.min.js"></script>
 <script type="text/javascript">
 "use strict";
 
