--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ div.dc-chart rect.deselected + text.row { fill: #555; }
 }
 #tcontainer {
   width:100%; clear:both;
-  min-height: 250px;
+  min-height: 450px;
   position:relative;
   background-repeat: no-repeat space; background-position: right;
 }
@@ -218,8 +218,8 @@ d3.json('data.json', function(json) {
   var SOURCES = {
     'H': 'home source',
     'F': 'XFEL (any)',
-    '?': 'a synchrotron',
-    '-': 'not specified',
+    '?': 'synchrotron',
+    '-': 'unspecified',
 
     'a': 'APS (US, IL)',
     'e': 'ESRF (FR)',
@@ -483,7 +483,7 @@ d3.json('data.json', function(json) {
       return;
     }
     box.lastChild.src = ''
-    box.lastChild.style.top = (y > 250 ? -250 : 50) + 'px';
+    box.lastChild.style.top = (y > 200 ? -250 : 50) + 'px';
     box.style.visibility = 'visible';
     timer = setTimeout(function() {
       box.lastChild.src = 'http://www.rcsb.org/pdb/images/' + code +
