update, 160 new entries

--- a/trends.html
+++ b/trends.html
@@ -13,7 +13,7 @@ gtag('js', new Date()); gtag('config', 'UA-108779978-1');
 </script>
 <style>
 html { margin: 0 auto; max-width: 1500px; overflow-y: scroll; }
-body { font: 14px sans-serif; line-height: 20px; }
+body { font: 14px sans-serif; line-height: 20px; margin: 0; }
 .clearfix:before, .clearfix:after {
   display: table; line-height: 0; content: ""; }
 .clearfix:after { clear: both; }
